--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
+blinker==1.4
 click==8.1.3
 Flask==2.1.2
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+psycopg2==2.9.3
+python-dotenv==0.20.0
+python-http-client==3.3.7
 schedule==1.1.0
+sendgrid==6.9.7
 SQLAlchemy==1.4.37
+starkbank-ecdsa==2.0.3
 Werkzeug==2.1.2
 zipp==3.8.0
