--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 blinker==1.4
+cffi==1.15.1
 click==8.1.3
 Flask==2.1.2
 Flask-Mail==0.9.1
@@ -8,7 +11,10 @@ importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+passlib==1.7.4
 psycopg2==2.9.3
+pyasn1==0.4.8
+pycparser==2.21
 python-dotenv==0.20.0
 python-http-client==3.3.7
 schedule==1.1.0
